fixed bug where contact and blog link would take you to wrong section

--- a/src/index.html
+++ b/src/index.html
@@ -877,8 +877,8 @@
           <button>option4</button>
         </div>
       </li>
-      <li  role="button" tabindex="0"  on="tap:posts-content.scrollTo(duration=1000)">Blog</li>
-      <li  role="button" tabindex="0" on="tap:contact-content.scrollTo(duration=1000)">Contact</li>
+      <li  role="button" tabindex="0"  on="tap:sidebar.close,posts-content.scrollTo(duration=1000)">Blog</li>
+      <li  role="button" tabindex="0" on="tap:sidebar.close,contact-content.scrollTo(duration=1000)">Contact</li>
     </ul>
   </nav>
 
