fixed titles for all sections to fit screen properly

--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
 
     .table-container-social {
       position:relative;
-      width: 100%;
+      width: 60%;
       margin: 0 auto;
       display: grid;
       margin-top: 200px;
@@ -280,7 +280,7 @@
     }
 
     #contact-content {
-      margin-bottom: 1000px;
+      margin-bottom: 100px;
     }
 
     .table-container-mobile {
@@ -916,17 +916,16 @@
     </div>
   </div>
   <div class="content-container" id="features-content">
-    <div id="gallery-title-container">
-      <amp-fit-text  width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
         Simple Systeme Fordiscount
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
@@ -998,17 +997,16 @@
     </div>
   </div>
   <div class="content-container" id="features-content2">
-    <div id="gallery-title-container">
-      <amp-fit-text width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
         Amazing Features
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
@@ -1128,17 +1126,16 @@
     </div>
   </div>
   <div class="content-container" id="carousel-content">
-    <div id="gallery-title-container">
-      <amp-fit-text width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
         App Gallery
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
@@ -1205,17 +1202,16 @@
     </amp-youtube>
   </div>
   <div class="content-container" id="team-content">
-    <div id="gallery-title-container">
-      <amp-fit-text width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
         Team Members
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
@@ -1359,17 +1355,16 @@
     </div>
   </div>
   <div class="content-container" id="payment-content">
-    <div id="gallery-title-container">
-      <amp-fit-text width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
-        Meet With Price
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
+        Meet with Price
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
@@ -1466,17 +1461,16 @@
 
   </div>
   <div class="content-container" id="posts-content">
-    <div id="gallery-title-container">
-      <amp-fit-text width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
         Latest Posts
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
@@ -1538,19 +1532,19 @@
   </div>
   <div class="content-container" id="contact-content">
 
-    <div id="gallery-title-container">
-      <amp-fit-text width="400"
-                    height="50"
-                    max-font-size="40"
-                    layout="responsive">
+    <div  id="gallery-title-container">
+      <amp-fit-text style="color:black;font-family:Courier New, monospace"
+                    height="70"
+                    layout="fixed-height"
+      >
         Contact
       </amp-fit-text>
-      <amp-fit-text id="gallery-subtext" width="300"
+      <amp-fit-text style="font-family:Courier New, monospace" id="gallery-subtext"
                     height="50"
-                    max-font-size="15"
-                    layout="responsive">
+                    layout="fixed-height">
         Sed Ut Perspiciatis Unde Omnis Iste Natus Error Sit Voluptatem Accusantium Doloremque
       </amp-fit-text>
+    </div>
       <div class="table-container-social">
         <div class="social-item">
           <div class="contact-row">
@@ -1616,7 +1610,7 @@
           </div>
         </div>
 
-    </div>
+
   </div>
   <div class="content-container" id="about">
 
