--- a/src/index.html
+++ b/src/index.html
@@ -482,6 +482,19 @@
       z-index: 1;
     }
 
+    #social-submit {
+      width: 150px;
+      height: 45px;
+      background-color:yellowgreen;
+      color:white;
+      margin: 0 auto;
+      border:none;
+    }
+
+    #social-submit:hover {
+      opacity: 0.7;
+    }
+
 
     .navbar-list li {
       list-style-type: none;
@@ -1607,6 +1620,7 @@
             <input class="social-input" placeholder="Your Email"/>
             <input class="social-input" placeholder="Subject"/>
             <textarea class="social-input" placeholder="Message"></textarea>
+            <button id="social-submit">Send Message</button>
           </div>
         </div>
 
