--- a/src/index.html
+++ b/src/index.html
@@ -866,7 +866,7 @@
 
 
     #carousel-buttons {
-      width: 25%;
+      width: 65px;
       height: 20px;
       position:relative;
       margin: 0 auto;
@@ -879,21 +879,25 @@
     }
 
     .carousel-btn {
-      width: 7px;
-      height:7px;
+      width: 10px;
+      height:10px;
       background-color:grey;
       border-radius: 50%;
       border:none;
       position:relative;
+      margin: 0 auto;
+      margin-left: 5px;
     }
 
     .carousel-btn-selected {
-      width: 7px;
-      height:7px;
+      width: 10px;
+      height:10px;
       background-color:yellowgreen;
       border-radius: 50%;
       border:none;
       position:relative;
+      margin: 0 auto;
+      margin-left: 5px;
     }
 
     .carousel-btn:active {
