--- a/src/index.html
+++ b/src/index.html
@@ -866,7 +866,7 @@
 
 
     #carousel-buttons {
-      width: 60px;
+      width: 25%;
       height: 20px;
       position:relative;
       margin: 0 auto;
