changed carousel button formatting

--- a/src/index.html
+++ b/src/index.html
@@ -866,8 +866,9 @@
 
 
     #carousel-buttons {
-      width: 25%;
-      height: 20px;
+      width: 100px;
+      height: 25px;
+      background-color:red;
       position:relative;
       margin: 0 auto;
       align-items:center;
@@ -885,7 +886,6 @@
       border-radius: 50%;
       border:none;
       position:relative;
-      margin: 0 auto;
       margin-left: 5px;
     }
 
@@ -896,7 +896,6 @@
       border-radius: 50%;
       border:none;
       position:relative;
-      margin: 0 auto;
       margin-left: 5px;
     }
 
