--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html amp lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 
@@ -19,7 +19,10 @@
 
   <title>Hello, AMPs</title>
   <link rel="canonical" href="./index.html">
+
+  <!--
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  -->
   <script type="application/ld+json">
       {
         "@context": "http://schema.org",
