changed overflow on flying carpet

--- a/src/index.html
+++ b/src/index.html
@@ -1710,6 +1710,7 @@
     </div>
     <amp-fx-flying-carpet style="width:100%" height="300px">
       <amp-img src="./img/la.jpg"
+               style="overflow-x:hidden"
                width="1000"
                height="800"></amp-img>
 
