--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html amp lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 
@@ -62,6 +63,15 @@
 
     .container {
       margin-bottom: 50px;
+      padding-left:0;
+      padding-right:0;
+      padding:0;
+    }
+
+    .container-fluid {
+      padding-left:0;
+      padding-right:0;
+      padding:0;
     }
 
     .justify-content-md-center {
