--- a/src/index.html
+++ b/src/index.html
@@ -63,15 +63,15 @@
 
     .container {
       margin-bottom: 50px;
-      padding-left:0;
-      padding-right:0;
-      padding:0;
+      padding-left:0px;
+      padding-right:0px;
+      padding:0px;
     }
 
     .container-fluid {
-      padding-left:0;
-      padding-right:0;
-      padding:0;
+      padding-left:0px;
+      padding-right:0px;
+      padding:0px;
     }
 
     .justify-content-md-center {
