--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,8 @@
       padding-right:0px;
       padding:0px;
       background-color:red;
-      max-width:90%;
+      max-width:100%;
+      position:relative;
     }
 
     .container-fluid {
@@ -76,7 +77,8 @@
       padding-right:0px;
       padding:0px;
       background-color:red;
-      max-width:90%;
+      max-width:100%;
+      position:relative;
     }
 
     .justify-content-md-center {
