--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,14 @@
       position:relative;
     }
 
+    .row {
+      padding:0px;
+      padding-left:0px;
+      padding-right:0px;
+      margin-left:0px;
+      margin-right:0px;
+    }
+
     .container-fluid {
       padding-left:0px;
       padding-right:0px;
@@ -1130,7 +1138,7 @@
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
-    <div style="width:100%;position:relative;margin:0 auto" class="row justify-content-center">
+    <div style="width:80%;position:relative;margin:0 auto" class="row justify-content-center">
       <div class="col-sm-offset-3 table-item col-12 col-md-4">
         <div class="feature-image">
           <amp-img src="./img/features-img1.svg"
@@ -1215,7 +1223,7 @@
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
-    <div style="width:90%;position:relative;margin:0 auto" class="row justify-content-md-center">
+    <div style="width:80%;position:relative;margin:0 auto" class="row justify-content-md-center">
       <div class="table-item col-12 col-md-3">
         <div class="feature-image">
           <amp-img src="./img/features-img4.svg"
@@ -1330,7 +1338,7 @@
       </div>
     </div>
   </div>
-  <div class="content" id="carousel-content">
+  <div class="container" id="carousel-content">
     <div id="screenshot-title"  class="gallery-title-container">
       <amp-fit-text style="color:black;font-weight: 100;font-family:'Roboto', sans-serif"
                     height="70"
@@ -1538,7 +1546,7 @@
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
-    <div class="row justify-content-md-center">
+    <div  class="row justify-content-md-center">
       <div class="price-table-item col-12 col-md-4">
         <h4>BASIC</h4>
         <h3>$29</h3>
@@ -1561,7 +1569,7 @@
           <button class="price-button">BUY NOW</button>
         </div>
       </div>
-      <div class="price-table-item">
+      <div class="price-table-item col-12 col-md-4">
         <h4>PERSONAL</h4>
         <h3>$29</h3>
         <div class="price-row">
@@ -1583,7 +1591,7 @@
           <button class="price-button">BUY NOW</button>
         </div>
       </div>
-      <div class="price-table-item">
+      <div class="price-table-item col-12 col-md-4">
         <h4>BUSINESS</h4>
         <h3>$29</h3>
         <div class="price-row">
@@ -1605,7 +1613,7 @@
           <button class="price-button">BUY NOW</button>
         </div>
       </div>
-      <div class="price-table-item">
+      <div class="price-table-item col-12 col-md-4">
         <h4>PROFESSIONAL</h4>
         <h3>$29</h3>
         <div class="price-row">
@@ -1644,7 +1652,7 @@
         Integer Cursus Bibendum Augue Ac Cursus
       </amp-fit-text>
     </div>
-    <div class="row justify-content-md-center">
+    <div style="max-width:90%" class="row justify-content-md-center">
       <div  class="post-table-item col-12 col-md-4">
         <amp-img src="./img/post1.jpg"
                  width="200"
@@ -1752,7 +1760,7 @@
         Sed Ut Perspiciatis Unde Omnis Iste Natus Error Sit Voluptatem Accusantium Doloremque
       </amp-fit-text>
     </div>
-      <div class="row justify-content-md-center">
+      <div style="max-width:80%" class="row justify-content-md-center">
         <div class="social-item col-12 col-md-6">
           <div class="contact-row">
             <amp-img src="./img/marker.png"
