canged body size

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
 
     html, body {
-      max-width:100%;
+      max-width:80%;
       overflow-x:hidden;
       position:relative;
     }
@@ -68,7 +68,7 @@
       padding-right:0px;
       padding:0px;
       background-color:red;
-      max-width:90%;
+      max-width:80%;
       position:relative;
     }
 
@@ -85,7 +85,7 @@
       padding-right:0px;
       padding:0px;
       background-color:red;
-      max-width:90%;
+      max-width:80%;
       position:relative;
     }
 
@@ -179,6 +179,10 @@
       color: grey;
       font-family: sans-serif;
       font-weight: normal;
+    }
+
+    #features-content2 {
+      margin-bottom: 100px;
     }
 
     .gallery-title-container {
@@ -352,6 +356,10 @@
       margin-bottom: 150px;
     }
 
+    #payment-content {
+      margin-bottom: 50px;
+    }
+
     #price-table {
 
       position:relative;
@@ -366,7 +374,6 @@
 
     #carousel-content {
 
-      height: 410px;
       margin-bottom: 100px;
     }
 
@@ -440,7 +447,7 @@
 
       padding: 10px;
       width: 200px;
-      height: 250px;
+      height: 275px;
       position:relative;
       float:left;
       color: grey;
@@ -660,7 +667,7 @@
     }
 
     #main-content {
-      position:absolute;
+      position:relative;
       top:100px;
       width: 100%;
       height: 100%;
@@ -1393,7 +1400,7 @@
 
     </amp-youtube>
   </div>
-  <div class="container-fluid" style="width:90%" id="team-content">
+  <div class="container-fluid"  id="team-content">
     <div id="team-title" style="width:75%"  class="gallery-title-container">
       <amp-fit-text style="color:black;font-weight: 100;font-family:'Roboto', sans-serif"
                     height="70"
@@ -1532,7 +1539,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid" style="width:90%" id="payment-content">
+  <div class="container-fluid" style="width:80%" id="payment-content">
     <div id="price-title" style="width:75%" class="gallery-title-container">
       <amp-fit-text style="color:black;font-weight: 100;font-family:'Roboto', sans-serif"
                     height="70"
@@ -1638,7 +1645,7 @@
     </div>
 
   </div>
-  <div class="container-fluid" style="width:90%" id="posts-content">
+  <div class="container-fluid" style="width:80%" id="posts-content">
     <div id="blog-title" style="width:75%" class="gallery-title-container">
       <amp-fit-text style="color:black;font-weight: 100;font-family:'Roboto', sans-serif"
                     height="70"
@@ -1745,7 +1752,7 @@
 
     </amp-fx-flying-carpet>
   </div>
-  <div class="container-fluid" style="width:90%" id="contact-content">
+  <div class="container-fluid" style="width:80%" id="contact-content">
 
     <div id="contact-title" style="width:50%" class="gallery-title-container">
       <amp-fit-text style="color:black;font-weight: 100;font-family:'Roboto', sans-serif"
