changed body size

--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
     }
 
 
-    html, body {
-      max-width:80%;
+    body {
+      max-width:95%;
       overflow-x:hidden;
       position:relative;
       margin:0 auto;
@@ -69,7 +69,6 @@
       padding-right:0px;
       padding:0px;
       background-color:red;
-      max-width:80%;
       position:relative;
     }
 
@@ -86,7 +85,6 @@
       padding-right:0px;
       padding:0px;
       background-color:red;
-      max-width:80%;
       position:relative;
     }
 
@@ -1039,6 +1037,7 @@
     }
 
   </style>
+
 </head>
 
 <body>
@@ -1050,6 +1049,8 @@
     }
   </script>
 </amp-state>
+
+
 <header class="navbar">
 
   <div id="site-name">
