--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
 
     body {
-      max-width:95%;
+      max-width:100%;
       overflow-x:hidden;
       position:relative;
       margin:0 auto;
@@ -668,9 +668,9 @@
     #main-content {
       position:relative;
       top:100px;
-      width: 100%;
+      width: 80%;
       height: 100%;
-
+      margin: 0 auto;
     }
 
     #home-content {
