--- a/src/index.html
+++ b/src/index.html
@@ -748,6 +748,10 @@
       z-index: 999;
     }
 
+    #quote-content {
+      box-shadow: 3px 3px 100px grey;
+    }
+
     #quote-logo {
       z-index:999;
       width: 50px;
@@ -856,7 +860,6 @@
       position:relative;
       margin: 0 auto;
       background-color:white;
-      box-shadow: 3px 3px 100px grey;
       overflow: hidden;
     }
 
